--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
+input,
+button {
+  all: unset;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  width: 100%;
+}
+
 body {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -28,17 +37,33 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   height: 400px;
   width: 150px;
-  gap: 50px;
+  gap: 10px;
 }
 
-.right-container {
-  display: flex;
+#colorInput {
+  height: 80px;
+  width: 80px;
+}
+
+#colorInput:hover {
+  transform: scale(1.1);
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 50px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+#container {
+  display: grid;
   height: 400px;
   width: 400px;
-  justify-content: center;
-  align-items: center;
+  grid-template-columns: repeat(var(--columns-row), 1fr);
+  grid-template-rows: repeat(var(--columns-row), 1fr);
   border: 2px solid red;
 }
 
