--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,20 @@
+* {
+  font-family: Helvetica;
+}
+
 input,
 button {
   all: unset;
   cursor: pointer;
+}
+
+button {
+  border: 1px solid black;
+  height: 20px;
+  width: 140px;
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
 }
 
 input:hover,
@@ -23,7 +36,6 @@ header {
   justify-content: center;
   font-size: 64px;
   text-align: center;
-  font-family: Helvetica;
   font-weight: 700;
   height: 150px;
 }
@@ -42,7 +54,7 @@ header {
   align-items: center;
   height: 400px;
   width: 150px;
-  gap: 25px;
+  gap: 15px;
 }
 
 #colorInput {
@@ -54,6 +66,27 @@ input[type="color"]::-webkit-color-swatch {
   border: none;
   border-radius: 50px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  background-color: white;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  height: 10px;
+  border: 1px solid black;
+  border-radius: 25px;
+  background: white;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 24px;
+  height: 24px;
+  border-radius: 25px;
+  margin-top: -8px;
+  background: black;
 }
 
 #grid {
